--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ serde = "1.0.151"
 serde_json = "1.0.91"
 tokio = { version = "1.23.0", features = ["macros"] }
 log = "0.4.17"
+glob = "0.3.0"
 #env_logger = "0.10.0"
